--- a/index.html
+++ b/index.html
@@ -4,107 +4,7 @@
 		<title>Code Magic</title>
 		<meta charset="utf-8" />
 		<script type="text/javascript" src="jquery-2.1.4.js"></script>
-		<style type="text/css">
-			
-			body {
-				margin: 0;
-				padding: 0;
-				font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-				font-weight: 300;
-			}
-			#menubar {
-				width: 100%;
-				height: 40px;
-				background-color: #e0e0e0;
-				border-bottom: 1px solid gray;
-			}
-
-			#logo {
-				padding:  5px 0 0 20px;
-				font-weight: bold;
-				font-size: 120%;
-				float: left;
-			}
-
-			#buttonDiv {
-				float: right;
-				padding: 5px 20px 0 0;
-			}
-
-			#runButton {
-                background-color: #F7FBFC;
-				font-size: 120%;
-                border-radius: 5px;
-                cursor: pointer;
-			}
-
-			#toggles {
-            	width: 192px;
-				margin: 0 auto;
-				list-style: none;
-				border: 1px solid gray;
-				border-radius: 3px;
-				padding: 0;
-				height: 26px;
-				position: relative;
-				top: 5px;
-			}
-
-			#toggles li {
-				float: left;
-				border-right: 1px solid gray;
-				padding: 4px 6px;
-			}
-
-			.clear {
-				clear: both;
-			}
-
-			.codeContainer {
-				width: 50%;
-				height: 100%;
-				float: left;
-				position: relative;
-			}
-
-			.codeContainer textarea {
-				width: 100%;
-				height: 100%;
-				border: none;
-				border-right: 1px solid gray; 
-				box-sizing: border-box;
-				font-family: monospace;
-				font-size: 130%;
-				padding: 5px;
-			}
-
-			.selected {
-				background-color: grey;
-			}
-
-		 .codeLabel {
-                padding: 3px;
-				position: absolute;
-				top: 10px;
-				right: 10px;
-				font-weight: bold;
-                border: 1px solid grey;
-                border-radius: 5px;
-                background-color: #FAFAFA;
-			}
-
-			#CSSContainer, #JSContainer {
-				display: none;
-			}
-
-		    iframe {
-		    	height: 100%;
-		    	width: 80%;
-		    	position: relative;;
-		    	left: 10px;
-		    	border: none;
-		    } 
-		</style>
+		<link rel="stylesheet" href="style.css" type="text/css">
 	</head>
 	<body>
 		
